# Normaliz

./: .clang-format  .codecov.yml  .github-ci-build.sh  .github-ci-build_check.sh  .github-ci-build_configure.sh  .github-ci-build_make.sh  .gitignore  .mailmap  .make-bindist.sh  .prepare-bindist.sh  .travis-build.sh  .travis.yml  .travis_ci_bindist_deploy_key.enc  AUTHORS  Ablaufplan  CHANGELOG  Dockerfile  INSTALL  Input.cpp  Makefile  Makefile.am  Makefile.configuration  N32.cc  N64.cc  NBig.cc  Normaliz-impl.cpp  Normaliz.cpp  Normaliz.h  QDockerfile  README.md  ReadMe.md  ReadMeWilf  bootstrap.sh  cone.cpp  cone.h  cone_dual_mode.cpp  cone_dual_mode.h  configure.ac  download.sh  full_cone.cpp  (+37 more)
Qexample/: 2equations.in  3x3magiceven.in  3x3magiceven_sat.in  5x5.in  5x5dual.in  600cell-dual.in  A543.in  Makefile.am  buckyball-hom.in  buckyball-v.in  dodecahedron-v.in  great_rhombicuboctahedron-v.in  icosahedron-v.in  medium.in  rational.in  small_rhombicuboctahedron-v.in
Qsource/: CMakeLists.txt  LibQnormalizConfig.cmake.in  Makefile.am  Makefile.classic  Makefile.configuration  Qinput.cpp  Qnormaliz.cpp  Qnormaliz.h  Qoptions.cpp  Qoptions.h  Qoutput.cpp  Qoutput.h  UseLibQnormaliz.cmake
Qsource/cmake/: detect_features.cmake
Qsource/libQnormaliz/: CMakeLists.txt  Makefile.classic  Qcone.cpp  Qcone.h  Qcone_helper.h  Qcone_property.cpp  Qcone_property.h  Qconvert.h  Qfull_cone.cpp  Qfull_cone.h  Qgeneral.h  Qinteger.cpp  Qinteger.h  Qlibnormaliz.cpp  Qlist_operations.cpp  Qlist_operations.h  Qmap_operations.h  Qmatrix.cpp  Qmatrix.h  Qmy_omp.h  Qnormaliz_exception.h  Qproject_and_lift.cpp  Qproject_and_lift.h  Qsublattice_representation.cpp  Qsublattice_representation.h  Qvector_operations.cpp  Qvector_operations.h  Qversion.h  Qversion.h.in  libQnormaliz-all.cpp  libQnormaliz-templated.cpp  libQnormaliz.h
Qtest/: Makefile.am  Makefile.classic
Qtest/test-degenerate/: empty0M.in  empty0M.ref  empty2lineM.ref  empty2pointM.ref  point0M.ref  point0V.ref
Qtest/test-nf/: 2cone-sqrt2-cone.in  2cone-sqrt2-cone.ref  2cone-sqrt2.in  2cone-sqrt2.ref  2cone.ref  600cell-dual.ref  600cell.ref  QConstSymb.ref  buckyball-v.ref  dodecahedron-v.in  dodecahedron-v.ref  formatted.in  formatted.ref  grandantiprism.in  grandantiprism.ref  great_rhombicuboctahedron-v.ref  icosahedron-v.ref  ikosaeder-perturbed-dual.in  ikosaeder-perturbed-dual.ref  ikosaeder-perturbed.ref  ikosaeder.ref  ikosaeder32.ref  ikosaeder4.in  ikosaeder4.ref  low-dim.ref  nonpointed.in  nonpointed.ref  small_rhombicuboctahedron-v.ref  sparse.ref  sqauare-3rd_root_2.in  sqauare-3rd_root_2.ref  sqauare-cone.in  sqauare-cone.ref  strict.in  strict.ref  truncateddodecahedron.ref
Qtest/test-nf-hh/: dodecahedron-v.IntHull.ref  dodecahedron-v.in  dodecahedron-v.ref  icosahedron-v.IntHull.ref  icosahedron-v.ref  truncated_dodecahefron_dual.IntHull.ref  truncated_dodecahefron_dual.in  truncated_dodecahefron_dual.ref
Qtest/test-qq/: 2equations.ref  2x2.in  2x2.ref  3x3magic.ref  4x4.ref  5x5.ref  5x5dual.in  A443.in  A443.ref  Condorcet.in  InhomIneq_7.in  InhomIneq_gen.in  InhomIneq_gen.ref  bo5.in  bo5.ref  cut_poly_7.ref  gen_inhom_nonpointed.in  gen_inhom_nonpointed.ref  max_polytope_cand.in  max_polytope_cand.ref  rational.in  rational.ref  strict_sign.ref  subspace4.in  subspace4.ref
Qtest/test-qq-hh/: 5x5.IntHull.ref  5x5.in  5x5.ref  rational.IntHull.ref  rational.in  rational.ref  small.IntHull.ref  small.in  small.ref
Qtest/test-s/: 2equations.in  2equations.ref  2x2.ref  3x3magic.in  3x3magic.ref  4x4.in  4x4.ref  5x5dual.in  5x5dual.ref  A443.ref  Condorcet.ref  InhomIneq_7.in  InhomIneq_gen.ref  bo5.ref  gen_inhom_nonpointed.ref  medium.in  medium.ref  small.in  small.ref  strict_sign.ref
example/: 2cone.in  2cone_ext.in  2cone_grad.in  2cone_ineq.in  2cone_int.in  2cone_supp.in  2equations_default.in  3x3magic.in  3x3magicNGD.in  3x3magiceven.in  3x3magiceven.lat  3x3magiceven_lat.in  3x3magiceven_sat.in  4x4.in  5x5.aut  5x5.in  5x5Gorenstein.in  5x5dual.in  6x6.in  A443.in  A443monoid.in  A543.in  A543monoid.in  A553.in  A643.in  B4.in  ChF_16_1048576.in  ChF_2_64.in  ChF_8_1024.in  ChF_8_1024hom.in  CondEffPlur.aut  CondEffPlur.symm.in  CondEffPlurHilbBas.in  CondEffPlurSemi.in  CondEffPlurSemi.symm.in  CondEffPlurSemi.symm.pnm  CondEffPlurSymm.in  CondEffPlurSymmSemi.in  CondParSemi.in  CondParSymm.in  (+147 more)
source/: 2test.in  CMakeLists.txt  INSTALL  Input.cpp  LibnormalizConfig.cmake.in  Makefile  Makefile.am  Makefile.classic  Makefile.configuration  Makefile.sagbi  Normaliz-impl.cpp  Normaliz.cpp  Normaliz.h  Options.cpp  Options.h  UseLibnormaliz.cmake  [1,1,60,60,84,140,189,189,540,1260,1260,1890,1890,1890][-1,1,2,3,4,5,6,7,8,10,9,11,13,12].in  automorphism.cfg  callgraph.dot  callgrind.out.7077  callgrind.out.8604  cond5.txt  cone_inhom.in  contra.in  cyclo38.prof  cyclo60.prof  exploit_automs.prof  fusion.txt  inhom_square.in  input.cpp  input_Integer.cpp  libnormaliz.h  n64monitor.sh  nmz.prof  normaliz.cpp  normaliz.h  normaliz.prof  options.cpp  options.h  output.cpp  (+9 more)
source/Sagbi/: SagbiGrass.cpp
source/VAsimplex/: Makefile  VAsimplex.cpp
source/chunk/: add_chunks.cpp  chunk.cpp  run_all.sh  run_single.sh  scheduler.cpp
source/cmake/: detect_features.cmake
source/dynamic/: dynamic.cpp  second.mat  third.mat
source/genEhrhart/: CMakeLists.txt  INSTALL  Makefile  Makefile.classic  cyclRatFunct.C  genEhrhart.C  nmzIntInput.C  nmzIntPoly.C  nmzIntegral.C  nmzIntegrate.C
source/gperftools/: descent.prof  normaliz.prof
source/libnormaliz/: .collect_lat.cpp.kate-swp  .full_cone.cpp (latitude14s in Konflikt stehende Kopie 2019-04-24).kate-swp  .full_cone.cpp (t540p-2s in Konflikt stehende Kopie 2016-06-05).kate-swp  CMakeLists.txt  HilbertSeries.cpp  HilbertSeries.h  Makefile  Makefile.classic  Qfull_cone.h  README  automorph.cpp  bottom.h  (+105 more)
test/: .Makefile.classic.kate-swp  Makefile  Makefile.am  Makefile.classic  Makefile.classic-out  catch.hpp  normaliz-windows.sh  oput2ref.sh  out2ref.sh  sortdiff  subspace4_inhom.in  subspace_vertices.in  tests-dynamic_bitset.cpp  tests-main.cpp
(+2178 files in other folders)
