EXTRA_DIST =					\
	2equations.in				\
	2x2.in					\
	3x3magic.in				\
	3x3magiceven.in				\
	3x3magiceven_lat.in			\
	3x3magiceven_sat.in			\
	4x4.in					\
	5x5.in					\
	5x5dual.in				\
	A443.in					\
	A543.in					\
	bo5.in					\
	Condorcet.in				\
	cut_poly_7.in				\
	cyclicpolytope30-15.in			\
	gen_inhom_nonpointed.in			\
	InhomIneq_7.in				\
	InhomIneq_gen.in			\
	max_polytope_cand.in			\
	medium.in				\
	rational.in				\
	small.in				\
	strict_sign.in				\
	subspace4.in
