EXTRA_DIST =					\
	2equations.in				\
	5x5.in					\
	600cell-dual.in				\
	600cell.in				\
	A443.in					\
	buckyball-v.in				\
	Condorcet.in				\
	dodecahedron-v.in			\
	gen_inhom_nonpointed.in			\
	grandantiprism.in			\
	great_rhombicuboctahedron-v.in		\
	icosahedron-v.in			\
	small_rhombicuboctahedron-v.in		\
	truncateddodecahedron.in

