EXTRA_DIST =					\
	600cell-dual.in				\
	600cell.in				\
	buckyball-v.in				\
	dodecahedron-v.in			\
	grandantiprism.in			\
	great_rhombicuboctahedron-v.in		\
	icosahedron-v.in			\
	icosahedron-h.in			\
	perm7_d2_dual.in			\
	small_rhombicuboctahedron-v.in		\
	QConstSymb.in				\
	truncateddodecahedron.in



